related work done

--- a/artikulua.tex
+++ b/artikulua.tex
@@ -133,7 +133,7 @@ The work presented in this paper consists of the following main steps. First, we
 
 \section{Related Work}\label{sec:background}
 
-Analyzing demographic characteristics in social media is receiving increasing attention in the area of Social Media Mining \cite{morgan2017predicting}. The popularity of Twitter has in fact benefited such approaches as it is possible now to mine spontaneous contributions and opinions of users about any kind of topic in many languages, including less resource languages. At the same time, by taking into account the relations created between retweets will allow us to analyze and try to understand the type of relations and user communities that are being created within the social network. Both social and linguistic aspects are important for our work as we will try to perform social and demographic analysis via large scale linguistic processing on written texts extracted from a social network such as Twitter. The main techniques used here are those related to topic modelling, the study of social relationships and text processing or Natural Language Processing (NLP).
+Analyzing demographic characteristics in social media is receiving increasing attention in the area of Social Media Mining \cite{nguyen2016computational,morgan2017predicting}. The popularity of Twitter has in fact benefited such approaches as it is possible now to mine spontaneous contributions and opinions of users about any kind of topic in many languages, including less resource languages. At the same time, by taking into account the relations created between retweets will allow us to analyze and try to understand the type of relations and user communities that are being created within the social network. Both social and linguistic aspects are important for our work as we will try to perform social and demographic analysis via large scale linguistic processing on written texts extracted from a social network such as Twitter. The main techniques used here are those related to topic modelling, the study of social relationships and text processing or Natural Language Processing (NLP).
 
 With respect to topic modelling, many different approaches have tried to extract common information contained in large amounts of tweets scattered through the network, such as topic extraction with respect to an event and their related tweets \cite{hu2012lda}, real-time classification of twitter trends \cite{zubiaga2015real} or to compare the content of Twitter with traditional news media \cite{zhao2011comparing}. Applying topic modelling to tweets, like for other tasks, requires some pre-processing to make the task appropriate for such short texts or documents \cite{hong2010empirical}.
 
@@ -147,11 +147,11 @@ Of particular interest to us is the body of work performed with the objective of
   \centering
   \begin{tabular}{llcr}\hline
     Reference & Corpus size \# users & \# labels & Language \\ \hline \hline
-    Rao et al.(2010) & 1000 erabiltzaile & 2 & en \\
-    Al Zamal et al.(2012) & 400 erabiltzaile & 2 & en \\
-    Marquart et al.(2014) & 306 erabiltzaile & 5 & es \\
-    Nguyen et al.(2013) & 3110 erabiltzaile & 3 & nl \\
-    Morgan-Lopez et al.(2017) & 3184 erabiltzaile & 3 & en \\ \hline
+    Rao et al. (2010) & 1000 erabiltzaile & 2 & en \\
+    Al Zamal et al. (2012) & 400 erabiltzaile & 2 & en \\
+    Marquart et al. (2014) & 306 erabiltzaile & 5 & es \\
+    Nguyen et al. (2013) & 3110 erabiltzaile & 3 & nl \\
+    Morgan-Lopez et al. (2017) & 3184 erabiltzaile & 3 & en \\ \hline
   \end{tabular}
   \caption{Most relevant systems for age detection in Twitter.}
   \label{tab:arte ezaug}
