joseba start of conclusion

--- a/artikulua.tex
+++ b/artikulua.tex
@@ -699,7 +699,7 @@ To finish this section, Table \ref{tab:taldeak} offers an overview of the main s
 
 \section{Conclusion and Future Work}\label{sec:conclusion}
 
-We have shown how to develop 
+We have shown how to develop different systems that allows us an approximation to the reality of certain communities of Twitter, in this case to the community of Basque speakers. The first step has allowed the collection of large amounts of information based on the target community. The second step has allowed the segmentation of the extracted sample by life stage, demonstrating that it is possible to segment by demographic features. In third and last place, we can show the topics of conversation and the relationships of young and adults, showing the reality of two different groups. In general terms, it is proved that the combination of social science and computing science is enriching thanks to the application of Language Processing techniques, demonstrating that demographic features can be inferred and that social interactions can be discovered.
 
 Twitter sare sozialera konektatuta dauden euskal hiztun gazteen on-line errealitatera hurbilpen bat egitea lortu da. Helburu orokor hori betetzeko hainbat pausu eman dira, lehenik eta behin Twitter sare sozialetik euskal erabiltzaileen datu kantitate erraldoiak erauzi dira. Bigarrenik, erauzitako euskal txiolariak sailkatu dira gazte eta heldu artean, gazteen errealitatea ezagutzea baita helburu nagusia. Hirugarrenik eta azkenik, gazte eta helduen gaiak zeintzuk diren eta harremanak nola ematen diren argitu da, bi talde ezberdinen errealitatea zein den erakutsiz. Lan honekin, frogatuta geratzen da gizarte-zientzia eta konputazio-zientzien arteko konbinaketa aberasgarria dela, Hizkuntzaren Prozesamenduko teknikak aplikatuz, ezaugarri demografikoak iradoki edota diskurtso analisia bezalako atazak burutu daitezkeela erakutsi delarik.
 
