--- a/artikulua.tex
+++ b/artikulua.tex
@@ -623,7 +623,7 @@ Table \ref{tab:tab harr hld} shows the five main subgroups derived from the grap
 
 \item \textbf{Music and GED} (13.56\%): In the fourth subgroup there is a special phenomenon, since it brings together two different groups in the same subgroup. The first one is related to music, since we can appreciate different users related to the music scene (@EsneBeltza, @ZuriHidalgo, @ZeEsatek, @40minuturock, @hesiantaldea, @ItzrrSemeak ...). The second one is related to the users of the social movement ``Gure Esku Dago'' (@GoierrikoGED, @GEDTolosaldea, @GureEskuDagoDon ...).
 
-\item \textbf{Basque tweeters} (13.10\%): In this last subgroup, we would have common Basque users of Twitter, which are important within the Basque community due to their large number of follower or retweets.
+\item \textbf{Basque tweeters} (13.10\%): In this last subgroup we can find popular Basque users of Twitter, which are important within the Basque community due to their large number of followers or retweets.
 \end{itemize}
 
 \subsection{Relationships in the Young Graph}\label{sec:relat-young-subgr}
