--- a/artikulua.tex
+++ b/artikulua.tex
@@ -119,17 +119,14 @@ IXA NLP Group, University of the Basque Country UPV/EHU\\
 
 \section{Introduction}\label{sec:introduction}
 
-\indent Azken urteetan geroz eta ohikoagoak bilakatzen ari dira sare sozialak, gizakion bizitzaren zati geroz eta handiagoa hartzen ari baitira. Gure artean erlazionatzeko bide berriak ireki dira honi esker, oztopo espazial zein denboralak hautsi egin dira eta etengabeko konexioa ahalbidetu da komunitatearekin, nonahi eta noiznahi komunikatuta egoteko aukera irekiz \citep{castells2005sociedad}. Edonorekin, edozein momentutan, edozein tokitik konektatuta egoteko aukerak, harremantzeko modu hauen arrakastaren atzean daude, gazteen artean batez ere, eguneroko bizitzan normaltasunez txertatuz. Harremana oinarri duten kanal birtual hauek, ikerketarako aproposak diren informazio iturri berriak kontsideratu ditzakegu, gizarte ikerkuntzari ikerketa esparru berriak gehituz.\\
-\indent Abagune berri honen aurrean, Eusko Ikaskuntza fundazioak, euskaraz hitz egiten duten gazteak nola harremantzen diren eta zertaz aritzen diren ezagutzeko asmoarekin, proiektu hau finantzatu du. Eusko Ikaskuntzak diruz lagundutako Master Amaierako Lan honetan, gazte euskaldunengana heltzeko modurik onena teknologia berrien bitartez dela erabaki da, aipatutako informazio iturri berriak irekiz eta ikerkuntza teknika aurreratuak erabiliz. Ikerketa honen metodo zein teknika berritzaileak aplikatzeko, beharrezkoa izan da IXA taldearen inplikazio zuzena, batez ere, masterraren bitartez trebetasunak eta ezagutza transmititzeko. Honekin, ikus daiteke Euskal Herriko testuinguruan aukerak badaudela erronka berriei aurre egiteko eta begi puntuan dauden gaiei lotzeko.\\
-\indent Sare sozialetan euskal hiztun gazteek dauzkaten harreman sareen eta jorratzen dituzten gaien analisia egitea izan dira lan honen helburuak. Sare sozialak gazteon esparru bezala kontsideratu ditzakegu, haien sozializaziorako lanabes garrantzitsu bat izanik. Modu honetan, sareetan egiten den euskararen erabilera ezagutzea oso interesgarria da, garai berrietara moldatzeko euskarak daukan ahalmena ikusi, eta belaunaldi berrien espazioa diren sare sozialetan nola gauzatzen den ezagutzeko asmoz. Honela, euskararen egoera ezagutzetik gertuago egoteko aukera edukiko da, ikerketa-teknika tradizionalen osagarria izango den begirada berria eskainiz. Helburu horretarako Hizkuntzaren prozesamenduko tekniketan oinarritu gara, informatikako teknologiak gizarte-ikerkuntzan aplikatuz. Teknologia berrietan sortzen den edukia teknologia berrietan oinarritutako ikerketa-tekniken bitartez aztertuak izango dira, esparru berriak ikerketa-teknika berrien bidez ikertuz. Asmo horrekin, Twitter sare soziala hautatu da, identifikatutako euskal komunitate bat daukan sarea delako, eta baita, informazioa erauzterako orduan erraztasunak ematen dituelako ere, orokorrean jarioa publikoa delako, Instagram, Facebook eta Snapchat sareetan ez bezala.\\
-\indent Honela, Twitter sare sozialean euskal komunitatearen inguruko ikerketa burutu da, sare sozialak informazio iturri garrantzitsu bat direla frogatuz. Era honetan, euskal txiolarien komunitatearen euskarazko 6 milioi txio baino gehiago lortu dira, ia 8000 erabiltzaile ezberdinetatik. Datu-base erraldoi honetatik (Big Data), interpretagarria den informazioa erauztea izango da asmoa, desegituratutako datu hauek ulergarri bihurtuz (Data Mining). Behin datuak erauzi direla, hurrengo pausua gazteak detektatzean oinarrituko da, adina bezalako ezaugarri demografikoak iradokitzeko saiakera eginez. Adinaren identifikazio automatikoaren bideragarritasun falta ikusita, hurbilpen bat egitea erabaki da, txioaren idazteko eran oinarritu gara erabiltzaile gazteak eta helduak ezberdintzeko hizkuntza ez-formalaren erabilera maiztasunean oinarrituz. Ezberdintze hau burutzea garrantzitsua da, gazteen errealitatea ezagutzea lehentasun bat baita lan honetan, bai gazteen eduki eta harremanak ezagutzeko, eta baita, ezkutuan dauden ezaugarri demografikoak antzemateko kapazitatea badagoela frogatzeko ere. Gazteak eta helduak sailkatzeko hurbilpena burututa egonda, bi izango dira ikerketa honetan argitu nahiko diren inkognitak, euskaldunek zertaz hitz egiten duten eta norekin harremantzen diren. Alde batetik, euskal txiolariek zein gairen inguruan hitz egiten duten ezagutzea izango da lehendabiziko asmoa, komunitate honen gairik errepikatuenak zeintzuk diren argituz. Honetarako, Hizkuntzaren prozesamenduko teknikak (NLP) erabiliko dira, testuetatik informazioa ateratzeko. Beste aldetik, euskal txiolariak nola harremantzen diren ezagutzea izango da bigarren asmoa, egindako birtxioetan oinarrituta, komunitateak zehaztu eta hauetako pertsona garrantzitsuak identifikatuz.\\
-\indent Gizarte-zientzien eta konputazio-zientzien arteko konbinazioan kokatzen da lan honen ekarpen nagusia, aurrerapen teknologikoetan eta informazio mugagabean oinarritutako gizarte likidoa \citep{bauman2015modernidad} interpretatzen eta ulertzen lagunduko duen sinbiosia. Interneteko sareari esker, gizartea hobeto ulertzeko teknikak garatzeko orduan mugarri izan nahi du lan honek, gizarte-ikerkuntzan ireki den bide berri honetan lehenengo pausoak emanez. Lehenik eta behin, bilketan iraultza txiki bat piztea lortu da, interneteko datu-iturriak ustiatzeari esker, datu-iturri mugagabe bati ateak irekiz. Gizarte zientzietan datuak lortzea gutxi batzuen esku egon da beti suposatzen duen kostu altuagatik, baina Twitterren adibidez, Instagramen edo Facebooken ez bezala, edozeinek eskuratu ditzake datuak, informazioaren demokratizazio bat emanez. Hala ere, unibertsoa sare sozial zehatz honen erabiltzaileetara mugatzen da, iturri masiboagoak irekitzearen beharra dagoela azpimarratuz. Bigarrenik, datuen prozesaketan ere, hainbat teknika berritzaile aplikatzearen abantailak ikusi ahal izan dira. Zehatzago esanda, sare sozialetako erabiltzaile ezberdinen idatzizko adierazpen oinarrituta, zertaz hitz egiten duten eta nola harremandu diren antzematea lortu da. Honez gain, Ikasketa Automatikoan oinarritutako teknikei esker, ezaugarri demografikoak iradokitzeko ahalmena ere garatu da. Hau da, erabiltzaileen nolakotasunean oinarrituta, adina bezalako ezaugarri demografikoak intuitzeko kapaza den sistema bat garatu da. Honi esker, gizarte ikerlariontzat oinarrizkoak diren datuak (demografikoak kasu) igartzeko kapazitatea badagoela erakutsi da, datuak eskuragarri ez edukitzearen arazoa saihestuz. Hirugarrenik eta azkenik, datuen interpretagarritasuna errazteko asmoarekin, erabilitako teknikek bistaratze intuitibo eta grafiko bat izango dute, irudien laguntza izanik.
 
-The work presented in this paper consists of the following main steps. First, we will identify the relevant Basque Twitter users. Second, a large corpus of tweets will be extracted using the identified users' timelines. Third, we will classify users in terms of life stage (adult/young) by classifying the writing style of the tweets in their timelines as \emph{formal} or \emph{informal}. Five different classification methods will be investigated, including the use of machine learning techniques based on both feature-based and neural network architectures. We will use the classifier with the best results in order to label the large corpus of Basque tweets by their writing style thereby classifying their users as in terms of \emph{young} or \emph{adult}. In the final step, this classification will be used to investigate the most relevant topics among users of Twitter writing in Basque as well as for researching the social relations that emerge between each user type (young or adult). The final result will be a comprehensive sociological picture (automatically obtained) of the most important aspects within the community of Twitter users that use Basque for communication.
+In the last few years Twitter has become one of the most used social networks, creating new ways of consuming information but also of communicating and creating both leisure- and work-related relationships in a explicit manner but also implicitly, via the information we shared with our followers via retweets. Furthermore, nowadays Twitter has become a source of spontaneously generated textual data for many human languages, including less resource languages such as Basque. Thus this data is becoming more and more useful to do social and computational linguistic research \cite{nguyen2016computational,rosenthal2017semeval,baldwin2015shared} both to complement traditional methods of sociological research and to provide with massive amounts of textual data to apply modern techniques of Natural Language Processing (NLP) based on machine and deep learning, for tasks such as automatic analysis of opinions (Opinion Mining or Sentiment Analysis) \cite{rosenthal2017semeval,S16-1003}, Named Entity Recognition and Lexical Normalization \cite{baldwin2015shared}, fake news and rumour detection \cite{derczynski2017semeval}, among others.
 
-\subsection{Contributions}\label{sec:contributions}
+In this paper we present a multidisciplinary work that aims to contribute novel insights in social research by using and investigating techniques from Natural Language Processing based on the general background proposed by Bauman and his \emph{liquid society} \cite{bauman2013liquid}. Thus, the objective of this work is to provide a detailed social and demographic-based view of the most important topics and relationships that are formed between Basque Twitter users classified by life stage (young and adult). By ``Basque Twitter users'' we refer to those users that are geolocalized in the area of the Basque Country (cultural) and that write at least the 20\% of their tweets using the Basque language. This analysis will be entirely based on automatically collected tweets from Basque users.
 
+More specifically, the work presented in this paper will consist of the following main steps. First, we will identify the relevant Basque Twitter users. Second, a large corpus of tweets will be extracted using the identified users' timelines. Third, we will classify users in terms of life stage (adult/young) by classifying the writing style of the tweets in their timelines as \emph{formal} or \emph{informal}. This is due to the fact that we do not have metadata information about the users' age, which means that we have to somehow try to infer the life stage based on features about writing style. Five different classification methods will be investigated, including the use of machine learning techniques based on both feature-based and neural network architectures. We will use the classifier with the best results in order to label the large corpus of Basque tweets by their writing style thereby classifying their users as in terms of \emph{young} or \emph{adult}. In the final step, this classification will be used to investigate the most relevant topics among users of Twitter writing in Basque as well as for researching the social relations that emerge between each user type (young or adult). The final result will be a comprehensive sociological picture (automatically obtained) of the most important aspects within the community of Basque users of Twitter.
 
+The main contributions of this work are the following. First, we collect and publish a corpus of 6M tweets written in Basque and a manually annotated gold-standard of 1000 tweets in terms of the writing style, namely, \emph{formal} or \emph{informal}. Both corpora are made available to facilitate both NLP and social research in Basque\footnote{\url{https://github.com/ixa-ehu/heldugazte-corpus}} a less resource highly-inflected language. Second, we investigate the classification of Basque tweets as \emph{formal} or \emph{informal} using 5 different approaches including novel NLP techniques based on word embeddings, contextual character embeddings and neural networks. We believe that our work is the most comprehensive experimentation for the detection of users' age both in terms of number of users and NLP techniques used. Third, the models of the best system will be made publicly available to facilitate their use and reproducibility of results\footnote{\url{https://github.com/ixa-ehu/ixa-pipe-doc}}. An, interesting insight from this part is the fact that, contrary to common views, the neural approach \cite{akbik2018contextual} obtains very competitive results despite being trained on a very small dataset. We believe that is due mostly to the combination of character-based contextual embeddings with static word embeddings. Fourth, we perform the largest investigation of social relationships in terms of age stages for Basque communities based on an automatically classified corpus of almost 8K users. Finally, we believe that this work shows how to make it possible to do meaningful and large scale social and NLP research for less resource languages using texts from social media. In our view, this work is just the beginning.
 
 \section{Related Work}\label{sec:background}
 
@@ -729,7 +726,7 @@ Lan honek euskara XXI. mendeko testuingurura nola moldatzen ari den ezagutzeko a
 \authorcontributions{Conceptualization, JFdL, RA and IA; methodology, JFdL, RA and IA; software, JFdL, RA and IA; formal analysis, JFdL, RA, IA; data curation, JFdL and RA; writing—original draft preparation, RA and JFdL; writing—review and editing, RA; supervision, RA and IA.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\funding{The second author has been funded by the Spanish Ministry of Economy and Competitiveness (MINECO/FEDER, UE), under the project CROSSTEXT (TIN2015-72646-EXP) and the Ramon y Cajal Fellowship RYC-2017-23647. He also acknowledges the support of the BBVA Big Data 2018 ``BigKnowledge for Text Mining (BigKnowledge)'' project.}
+\funding{The second author is funded by the Spanish Ministry of Economy and Competitiveness (MINECO/FEDER, UE), under the project CROSSTEXT (TIN2015-72646-EXP) and the Ramon y Cajal Fellowship RYC-2017-23647. He also acknowledges the support of the BBVA Big Data 2018 ``BigKnowledge for Text Mining (BigKnowledge)'' project.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \acknowledgments{We gratefully acknowledge the support of NVIDIA Corporation with the donation of the Titan V GPU used for this research.}
